--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "POST_mediocrity_",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
-    "morgan": "^1.5.3"
+    "mongo": "^0.1.0",
+    "mongodb": "^2.1.7",
+    "morgan": "^1.5.3",
+    "promise-mongo": "^2.0.1",
+    "promised-mongo": "^1.2.0",
+    "redis": "^2.5.0-1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
